reworked implementation using separate messages collection
