# backend/src/routes/v1/chats.ts
@@ -1,7 +1,7 @@
 import { z } from "zod";
 
 import { Routes } from "../../data";
-import { zChat } from "../../data/db";
+import { zChat, zMessage } from "../../data/db";
 import { ChatController } from "../../controllers/chat";
 
 // Routes to manage chats
@@ -21,22 +21,6 @@ const routes = new Routes({
       return data;
     },
   })
-  .post("/v1/chats/{id}/message", "Create chat message", {
-    tags: ["Chat"],
-    req: z.object({
-      body: z.object({
-        message: z.string(),
-      }),
-      params: z.object({
-        id: z.string(),
-      }),
-    }),
-    resSuccessBody: zChat.extend({ _id: z.string() }),
-    handler: async ({ ctl, body, params }) => {
-      const data = await ctl.update(params.id, body.message);
-      return data;
-    },
-  })
   .get("/v1/chats/{id}", "Get chat", {
     tags: ["Chat"],
     req: z.object({
@@ -50,6 +34,22 @@ const routes = new Routes({
       return data;
     },
   })
+  .get("/v1/chats/{id}/messages", "Get chat messages", {
+    tags: ["Chat"],
+    req: z.object({
+      params: z.object({
+        id: z.string(),
+      }),
+    }),
+    resSuccessBody: z.object({
+      data: zMessage.extend({ _id: z.string() }).array(),
+      count: z.number(),
+    }),
+    handler: async ({ ctl, params }) => {
+      const { data, count } = await ctl.getMessages(params.id);
+      return { data, count };
+    },
+  })
   .get("/v1/chats", "Get chats", {
     tags: ["Chat"],
     req: z.object({}),
@@ -60,6 +60,21 @@ const routes = new Routes({
     handler: async ({ ctl }) => {
       const { data, count } = await ctl.list();
       return { data, count };
+    },
+  })
+  .post("/v1/chats/{id}/message", "Create chat message", {
+    tags: ["Chat"],
+    req: z.object({
+      body: z.object({
+        message: z.string(),
+      }),
+      params: z.object({
+        id: z.string(),
+      }),
+    }),
+    resSuccessBody: z.object({}),
+    handler: async ({ ctl, body, params }) => {
+      await ctl.update(params.id, body.message);
     },
   })
   .delete("/v1/chats/{id}", "Delete chat", {
